# synthetic-data-generator

./: .all-contributorsrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  100k_test_auto.ipynb  100k_test_label.ipynb  10k_check_cuda.py  10k_from_prefit_to_fit.py  10k_pre_fit.py  10k_single.py  10k_test_label.ipynb  10k_test_non_catg.ipynb  10k_test_prefit.ipynb  202410_generate_data.ipynb  202410_test.ipynb  202411_RFECV_test.ipynb  202411_generatorconnect_replace.ipynb  202411_test.ipynb  202411_tmp_test.ipynb  CONTRIBUTING.md  CONTRIBUTING_ZH_CN.md  DEVELOP.md  GitHubIssueNumber#155.md  Github Issue #155.docx  LICENSE  NOTICE  README.md  README_ZH_CN.md  RELEASE.md  ROADMAP.md  ROADMAP_ZH_CN.md  add_column_descriptions.py  adult.csv  config.py  demo.py  extend_bug_demo.py  main.py  multi_ctgan.py  (+13 more)
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE_1.md  sweep-refactor.yml
.github/workflows/: build-latest-images.yml  ci-test-docs.yml  ci-test-extension.yml  ci-test-image.yml  ci-test-python-package.yml  docker-image.yml  docker-publish.yml  docs.yml  extension.yml  image-release.yml  lint-check.yml  lint.yml  main.yml  publish.yml  python-package-release.yml  python-package.yml  run_actions.sh
benchmarks/: .gitignore  README.md  generate_dataset.py  requirements.txt  sdgx_ctgan.py  sdv_ctgan.py
dev-tools/: start-docs-host.sh
docker/: Dockerfile
docs/: README.md  quick_start.md  readme.md
docs/develop/: readme.md  single_table_GAN.md  single_table_GaussianCopula.md
docs/draw/: architecture.drawio  interaction.drawio
docs/source/: conf.py  index.rst
docs/source/api_reference/: data_loader.rst  exceptions.rst  index.rst  manager.rst  synthesizer.rst  utils.rst
docs/source/design/: architecture.rst  index.rst  motivation.rst
docs/source/developer_guides/: contributing.rst  data_models.rst  extension.rst  (+1 more)
example/: 1_ctgan_example.py  2_guassian_copula_example.py  3_save_load_synthesizer.py  ctabgan_example.py  sdg_example_LLM.ipynb  sdg_example_LLM_1.ipynb  sdg_example_LLM_2.ipynb  sdg_example_glm4.ipynb  sdgx_example_ctgan.ipynb  sdgx_example_metadata.ipynb  szdex_quantai_sdg_example_glm_1.ipynb  szdex_quantai_sdg_example_glm_2.ipynb
example/extension/dummycache/: pyproject.toml
example/extension/dummycache/dummycache/: dummycache.py
example/extension/dummycache/tests/: test_registed_cacher.py
example/extension/dummydataprocessor/: pyproject.toml
example/extension/dummydataprocessor/dummydataprocessor/: dataprocessor.py
example/extension/dummydataprocessor/tests/: test_registed_data_processor.py
example/extension/dummyexporter/: pyproject.toml
example/extension/dummyexporter/dummyexporter/: dummyexporter.py
example/extension/dummyexporter/tests/: test_registed_exporter.py
example/extension/dummymetadatainspector/: pyproject.toml
example/extension/dummymetadatainspector/dummymetadatainspector/: inspector.py
example/extension/dummymetadatainspector/tests/: test_registed_inspector.py
example/extension/dummymodel/: pyproject.toml
example/extension/dummymodel/dummymodel/: model.py
example/extension/dummymodel/tests/: test_registed_model.py
metrics/: base.py
models/: base.py
models/multi_tables/: multi_table_base.py
models/single_table/: ctgan.py
mycode/: 1k_data_sqlite.db  common.py  create_data_100k.ipynb  create_db.ipynb  dataset.py  graph_test.py  multi_ctgan.py  multi_rfe_ctgan.py  requirements.txt  test.py  test_10k.ipynb  test_20_tables.py
mycode/sdv/: evaluation.py
mycode/testcode/: 1k.db  Xargs.py  create_db.py  gen_data.py  metabuilder.py  timelog.txt
sdgx/: __init__.py  config.py  data_loader.py  errors.py  exceptions.py  log.py  manager.py  synthesizer.py  utils.py
sdgx/cachers/: base.py  disk_cache.py  extension.py  manager.py  mem_cache.py  memory_cache.py
sdgx/cli/: main.py  message.py  utils.py
sdgx/data_connectors/: __init__.py  base.py  csv_connector.py  dataframe_connector.py  extension.py  generator_connector.py  manager.py  mysql_connector.py
sdgx/data_exporters/: base.py  csv_exporter.py  extension.py  manager.py
sdgx/data_models/: combiner.py  metadata.py  multi_table_combiner.py  relationship.py
sdgx/data_processors/: __init__.py  base.py  extension.py  manager.py
sdgx/metrics/: base.py
sdgx/models/: __init__.py  base.py  extension.py  manager.py
sdgx/statistics/: base.py
sdgx/transform/: sampler.py  transformer.py  transformer_opt.py
sdgx/utils/: __init__.py  utils.py
test_model_10k/: metadata.json
test_model_10k_id0/: metadata.json
test_model_10k_single/: metadata.json
test_model_10k_single_id9/: metadata.json
tests/: .gitignore  conftest.py  extendBug.csv  extendBugEmptyTest.csv  test_csv_exporter.py  test_ctabgan.py  test_ctgan_synthesizer.py  test_github_actions.py  test_model_manager.py  test_save_extend.py  test_sdgx.py  test_synthesizer.py  test_transformer.py  test_utils.py  utils.py
tests/cli/: test_cli.py  test_csv_exporter.py  test_message.py
tests/data_connector/: test_csv_connector.py  test_dataframe_connector.py  test_generator_connector.py
tests/data_models/: test_combiner.py  test_enums.py  test_metadata.py  test_relationship.py
tests/data_processors/: test_dataprocessor.py
tests/dataloader/: test_cacher.py  test_dataloader.py
tests/manager/: test_cacher_manager.py  test_data_connector_manager.py  test_data_processor_manager.py  test_exporter.py  test_inspector_manager.py  test_model_manager.py
tests/metadata/: test_metadata.py
tests/metrics/: test_MISim.py  test_jsd.py
tests/models/: test_base.py  test_copula.py  test_ctgan.py  test_hma.py  test_nfrequencyencoder.py  test_nlabelencoder.py  test_singletableGPT.py  test_singletable_gpt.py
tests/optmize/: data_for_test_parallel_transform.csv  test_generator_connector_with_datetime_formatter.py  test_ndarry_loader.py  test_parallel_transform.ipynb  test_parallel_transform.py
tests/synthesizer/: test_ctgan_synthesizer.py
transform/: sampler.py  transformer.py
utils/: __init__.py  utils.py
utils/io/: csv_utils.py  mysql.py
(+267 files in other folders)
