[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdgx"
description = "synthetic-data-generator"
keywords = ["synthetic data", "hitsz-ids"]
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "numpy",
    "torch>=2",
    "torchvision",
    # sdv-dev changes their license, here we use MIT licensed version
    "rdt<1.3.0",
    "ctgan<0.7.0",
    "copulas<0.8.0",
    # sdv-dev ends
    "table-evaluator",
    "click",
    "pluggy",
    "loguru",
    "pyarrow",
    "pydantic>=2",
]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = ["Sphinx<=7.2.6", "sphinx-rtd-theme", "sphinx-click", "autodoc_pydantic"]

[project.scripts]
sdgx = "sdgx.cli.main:cli"

[[project.authors]]
name = "hitsz-ids"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "Apache Software License 2.0"

[project.urls]
Source = "https://github.com/hitsz-ids/synthetic-data-generator"

[tool.check-manifest]
ignore = [".*"]

[tool.hatch.version]
path = "sdgx/__init__.py"
