# Build with hatch, you can use any build tool you like.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdgx-dummymdataprocessor"

dependencies = ["sdgx"]
dynamic = ["version"]

# This is the entry point for the Manager to find the extension.
[project.entry-points."sdgx.data_processor"]
dummydataprocessor = "dummydataprocessor.model"

[tool.hatch.version]
path = "dummydataprocessor/__init__.py"
